syntax = "proto3";

import "google/protobuf/timestamp.proto";
package comment;

// Comment Service
service CommentService {
  rpc CreateComment(CreateCommentRequest) returns (CommentResponse);
  rpc GetComment(GetCommentRequest) returns (CommentResponse);
  rpc GetCommentsByPost(GetCommentsByPostRequest) returns (GetCommentsResponse);
  rpc GetCommentsByUser(GetCommentsByUserRequest) returns (GetCommentsResponse);
  rpc UpdateComment(UpdateCommentRequest) returns (CommentResponse);
  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse);
  rpc GetCommentCount(GetCommentCountRequest) returns (GetCommentCountResponse);
  rpc DeleteComments(DeleteCommentsRequest) returns (DeleteCommentResponse);
}

message Author {
  string id = 1;
  string username = 2;
  string email = 3;
}

// Messages
message Comment {
  uint32 id = 1;
  string user_id = 2;
  uint32 post_id = 3;
  string description = 4;
  Author author = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateCommentRequest {
  string user_id = 1;
  uint32 post_id = 2;
  string description = 3;
}

message GetCommentRequest { uint32 id = 1; }

message GetCommentsByPostRequest {
  uint32 post_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message GetCommentsByUserRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message UpdateCommentRequest {
  uint32 id = 1;
  string user_id = 2;
  string description = 3;
}

message DeleteCommentRequest {
  uint32 id = 1;
  string user_id = 2;
  uint32 post_id = 3;
}

message DeleteCommentsRequest {
  repeated uint32 ids = 1;
  repeated string user_ids = 2;
  repeated uint32 post_ids = 3;
}

message GetCommentCountRequest { uint32 post_id = 1; }

message CommentResponse {
  bool success = 1;
  string message = 2;
  Comment comment = 3;
}

message GetCommentsResponse {
  bool success = 1;
  string message = 2;
  repeated Comment comments = 3;
  int32 total_count = 4;
  int32 page = 5;
  int32 page_size = 6;
}

message DeleteCommentResponse {
  bool success = 1;
  string message = 2;
}

message GetCommentCountResponse {
  bool success = 1;
  string message = 2;
  int32 count = 3;
}